--- a/yim_web/src/main/resources/templates/index.html
+++ b/yim_web/src/main/resources/templates/index.html
@@ -3,20 +3,79 @@
 <head>
     <meta charset="utf-8">
     <title>LayIM测试</title>
-    <link rel="stylesheet" href="/css/layui.css" media="all">
+    <link rel="stylesheet" href="../css/layui.css" media="all">
 </head>
 <body>
-<script src="/layui.js"></script>
+<script src="../lay/modules/layer.js"></script>
 <script>
     layui.use('layim', function(layim){
-        //先来个客服模式压压精
+        //基础配置
         layim.config({
-            brief: false //是否简约模式（如果true则不显示主面板）
-        }).chat({
-            name: '客服姐姐'
-            ,type: 'friend'
-            ,avatar: 'http://tp1.sinaimg.cn/5619439268/180/40030060651/1'
-            ,id: -2
+            /*init: {
+                url: '/chat/init' //接口地址（返回的数据格式见下文）
+                ,type: 'get' //默认get，一般可不填
+                ,data: {""} //额外参数
+            }*/
+
+            /*init: {
+                //我的信息
+                "mine": {
+                    "username": "纸飞机" //我的昵称
+                    ,"id": "100000" //我的ID
+                    ,"status": "online" //在线状态 online：在线、hide：隐身
+                    ,"sign": "在深邃的编码世界，做一枚轻盈的纸飞机" //我的签名
+                    ,"avatar": "a.jpg" //我的头像
+                }
+
+                //好友列表
+                ,"friend": [{
+                    "groupname": "前端码屌" //好友分组名
+                    ,"id": 1 //分组ID
+                    ,"list": [{ //分组下的好友列表
+                        "username": "贤心" //好友昵称
+                        ,"id": "100001" //好友ID
+                        ,"avatar": "a.jpg" //好友头像
+                        ,"sign": "这些都是测试数据，实际使用请严格按照该格式返回" //好友签名
+                        ,"status": "online" //若值为offline代表离线，online或者不填为在线
+                    }]
+    }]
+
+        //群组列表
+    ,"group": [{
+            "groupname": "前端群" //群组名
+            ,"id": "101" //群组ID
+            ,"avatar": "a.jpg" //群组头像
+        } ]
+    }*/
+
+            //获取群员接口（返回的数据格式见下文）
+           /* ,members: {
+                url: '' //接口地址（返回的数据格式见下文）
+                ,type: 'get' //默认get，一般可不填
+                ,data: {} //额外参数
+            }
+
+            //上传图片接口（返回的数据格式见下文），若不开启图片上传，剔除该项即可
+            ,uploadImage: {
+                url: '' //接口地址
+                ,type: 'post' //默认post
+            }
+
+            //上传文件接口（返回的数据格式见下文），若不开启文件上传，剔除该项即可
+            ,uploadFile: {
+                url: '' //接口地址
+                ,type: 'post' //默认post
+            }
+            //扩展工具栏，下文会做进一步介绍（如果无需扩展，剔除该项即可）
+            ,tool: [{
+                alias: 'code' //工具别名
+                ,title: '代码' //工具名称
+                ,icon: '&#xe64e;' //工具图标，参考图标文档
+            }]
+
+            ,msgbox: layui.cache.dir + 'css/modules/layim/html/msgbox.html' //消息盒子页面地址，若不开启，剔除该项即可
+            ,find: layui.cache.dir + 'css/modules/layim/html/find.html' //发现页面地址，若不开启，剔除该项即可
+            ,chatLog: layui.cache.dir + 'css/modules/layim/html/chatlog.html' //聊天记录页面地址，若不开启，剔除该项即可*/
         });
     });
 </script>
