--- a/yim_web/src/main/resources/templates/login.html
+++ b/yim_web/src/main/resources/templates/login.html
@@ -40,67 +40,10 @@
         </div>
     </div>
 </form>
-
-<!-- 注册模态框 -->
-<div class="modal fade" id="registerModal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog" style="position: absolute;top: 8%;left: 35%;">
-        <div class="modal-content div-radius">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" style="color: #666;">用户注册</h4>
-            </div>
-            <form class="form-horizontal" role="form" style="padding-right: 10px;padding-top:0px;" id="registerForm">
-                <div class="modal-body">
-                    <span id="errorMsg" class="error" style="height: 20px;margin-left: 20px;color: red;"></span>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">姓名</label>
-                        <div class="col-sm-9 no-edit" style="padding-left: 20px; height: 45px;">
-                            <input type="text" class="form-control" id="name" name="name" value="">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">性别</label>
-                        <div class="col-sm-9 no-edit radio" style="padding-left: 20px; height: 20px;margin-top: 20px;">
-                            <label>
-                                <input type="radio" value="男" name="sex" checked>
-                                男
-                            </label>
-                            <label>
-                                <input type="radio" value="女" name="sex" style="margin-left: 20px;">
-                                女
-                            </label>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">用户名</label>
-                        <div class="col-sm-9 no-edit" style="padding-left: 20px; height: 45px;">
-                            <input type="text" class="form-control" id="reg_username" name="username" value="">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">密码</label>
-                        <div class="col-sm-9 no-edit" style="padding-left: 20px; height: 45px;">
-                            <input type="password" class="form-control" id="reg_password" name="password" value="">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-2 control-label">确认密码</label>
-                        <div class="col-sm-9 no-edit" style="padding-left: 20px; height: 45px;">
-                            <input type="password" class="form-control" id="reg_password2" value="">
-                        </div>
-                    </div>
-                    <div class="modal-footer" style="padding: 15px 25px;">
-                        <button type="button"  class="btn btn-primary" style="margin-right: 50px;">立即注册</button>
-                        <button type="button" id="regCancelbutton" class="btn btn-default" style="margin-right: 200px;" data-dismiss="modal">&nbsp;&nbsp;&nbsp;&nbsp;关闭&nbsp;&nbsp;&nbsp;&nbsp;</button>
-                    </div>
-                </div>
-            </form>
-            <div class="roleId hidden"></div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal -->
 </div>
 
 <script src="../js/jquery-3.3.1.js"></script>
+<script src="../js/jquery.cookie.js"></script>
 <script src="../layui.js"></script>
 <script src="../js/common/message.js"></script>
 <script src="../js/html5.js"></script>
@@ -116,10 +59,10 @@
         $.post('/login', {'account': account, 'password': password}, function (result) {
             if (result.status == '200') {
                 layer.msg('登陆成功！');
-                //window.location.href = '/modelManage';
-                window.location.href = '/chat/index';
+                $.cookie("account",account);
+                //layer.msg($.cookie("account"));
+                window.location.href = '/index.html';
             } else {
-                //$.cicc_messager.alert(result.msg, 2);
                 layer.msg(result.msg);
             }
         });
